yaml/apiService.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: api-service
 labels:
  type: rest
  slot: smarthome
  app: api-service
spec:
 replicas: 1
 selector:
  matchLabels:
   app: api-service
 template:
  metadata:
   labels:
    app: api-service
  spec:
   containers:
    - image: expovin/api.services
      name: api-tado
      volumeMounts:
      - name: config
        mountPath: "/usr/src/app/secrets"
        readOnly: true                 
      ports: 
       - containerPort: 3200       
   volumes:
    - name: config
      secret:
       secretName: api-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      name : http
      port: 3200
      targetPort: 3200
