yaml/mongodb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
      - image: andresvidal/rpi3-mongodb3
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongo-local
      restartPolicy: Always
      volumes:
      - name: mongo-local
        persistentVolumeClaim:
          claimName: mongo-local
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  type: NodePort
  ports:
  - name: "mongodb"
    port: 27017
    nodePort: 32463
    name: mongo
  selector:
    io.kompose.service: mongodb
