yaml/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: reverse.proxy
spec:
 replicas: 1
 selector:
  matchLabels:
   app: reverse-proxy
 template:
  metadata:
   labels:
    app: reverse-proxy
  spec:
   containers:
    - image : nginx:latest
      name: reverse-proxy
      ports:
       - name: nodejs-port
         containerPort: 80     
      volumeMounts:
       - name : config-volumes
         mountPath: /etc/nginx
         readOnly: true
   volumes:
    - name : config-volumes
      configMap:
        name: nginx-config
        items:
         - key : nginx.conf
           path: nginx.conf
         - key : mongo.conf
           path: mongo.conf           
---
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  type: NodePort
  ports:
    - name : http
      protocol: TCP
      port: 31080
      nodePort: 31080
      targetPort: nodejs-port
    - name : mongo
      protocol: TCP
      port: 31027
      nodePort: 31027
      targetPort: nodejs-port
