yaml/nginxService.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
