yaml/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
      - path: /service
        backend:
          serviceName: api-tado
          servicePort: 3000
      - path: /proxy
        backend:
          serviceName: reverse-proxy
          servicePort: 31080
